--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ REACT_APP_AUTH_DOMAIN = colletion-tail.firebaseapp.com
 REACT_APP_PROJECT_ID = colletion-tail
 REACT_APP_STORAGE_BUCKET = colletion-tail.appspot.com
 REACT_APP_MESSAGING_SENDER_ID = 27121132528
-REACT_APP_API = 1:27121132528:web:9e d8783da8bb9dac0f3335
+REACT_APP_API = 1:27121132528:web:9ed8783da8bb9dac0f3335
 REACT_APP_MEASUREMENT_ID = G-VB77JHFH0N
