--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.0",
     "redux": "^4.2.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
